[package]
name    = "noritama"
version = "0.1.0"
authors = ["watawuwu <watawuwu@gmail.com>"]
exclude = ["examples/*", "tests/*", "benches/*", "*.png", "perf/*", "assets", "Makefile", "tmp.rs"]
repository = "https://github.com/watawuwu/noritama.git"
#documentation = "https://docs.rs/noritama/"
readme = "README.md"
license = "MIT"
keywords = ["command", "id", "k-ordered", "decentralized", "flake"]
categories = ["command-line-interface"]
description = """
NoritamaFlake is a library that generates decentralized and K-ordered id, affected by SnowFlake and ObjectId(Mongo-id)
"""

[dependencies]
lazy_static = "0.2"
time = "*"
byteorder = "1.0"
rustc-serialize = "0.3"
regex = "0.2"
clap = "2"
log = "0.3"
env_logger = "*"

[dev-dependencies]
quickcheck = "0.4"
quickcheck_macros = "0.4"
